user can zoom in on image

--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -57,7 +57,7 @@
               {{allposts[i].title}}
             </ion-card-header>
             <ion-card-content>
-              <img src="{{allposts[i].posturl}}">
+              <img src="{{allposts[i].posturl}}" imageViewer>
               <ion-row>
                 Price: {{allposts[i].price}}
               </ion-row>
