--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -75,6 +75,12 @@
         <ion-icon name="pin"></ion-icon>
         From {{(profileData | async)?.fromCity}} 
       </ion-item>
+
+     <ion-slides class ="image-slider" loop="true" effect="coverflow">
+       <ion-slide *ngFor = "let item of allposts">
+          <img src="{{allposts[i].posturl}}">
+       </ion-slide>
+     </ion-slides>
   </ion-content>
   
   
