--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -29,7 +29,7 @@
         <h2>{{key.displayName}}</h2>
       </ion-item>
       <ion-item-options slide="left">
-        <button ion-button color="primary" (click)="goToProfile()">
+        <button ion-button color="primary" (click)="sendreq(key)">
           <ion-icon name="person-add"></ion-icon>
           Add
         </button>
