User search enhanced

--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -26,7 +26,7 @@
         <ion-avatar item-left>
           <img src=''>
         </ion-avatar>
-        <h2>{{key.displayName}}</h2>
+        <ion-item (click)="goToProfile()"><h2>{{key.displayName}}</h2></ion-item>
       </ion-item>
       
     </ion-item-sliding>
