--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -44,7 +44,7 @@
   </ion-searchbar>-->
 
   <div class="tags-input" data-name="tags-input"></div>
-  <input class = "main-input" ion-input placeholder="#Hashtags" type = "text" >
+  <input class = "main-input" ion-input placeholder="#Hashtags" type = "text" [(ngModel)]="hashtag" >
 
   <ion-grid>
       <ion-row>
