--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -76,12 +76,13 @@
         From {{(profileData | async)?.fromCity}} 
       </ion-item>
 
+      <div class="featured">
       <ion-title>Featured Works</ion-title>
      <ion-slides class ="image-slider" loop="true" effect="coverflow">
        <ion-slide *ngFor = "let item of allposts; let i=index">
           <img src="{{allposts[i].posturl}}" imageViewer>
        </ion-slide>
-     </ion-slides>
+     </ion-slides></div>
 
 
   </ion-content>
