--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -7,9 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>User Uploads</ion-title> <button ion-icon name = "add" ion-button (click)="openAdd()">Add Art</button>
-   
+    <ion-title>User Uploads</ion-title> 
+    <button ion-icon name = "add" ion-button (click)="openAdd()">Add Art</button>
   </ion-navbar>
+  
 
 </ion-header>
 
