Revert "icon replaced"
This reverts commit b45bd197d7f4210b06104dadc0d2c9af641d7575.

--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -16,7 +16,7 @@
 <ion-content padding>
 
   <p>Upload from</p>
-
+    <!--button ion-button (click) = "takePic()">Take photo</button--> 
     <button ion-button icon color ='primary' clear (click) = "takePic()">
       <ion-icon name="camera"></ion-icon>
       Take Photo
