--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -77,7 +77,7 @@
       </ion-item>
 
       <div class="featured">
-      <ion-title padding>Featured Works</ion-title>
+      <ion-title>Featured Works</ion-title>
      <ion-slides class ="image-slider" loop="true" effect="coverflow">
        <ion-slide *ngFor = "let item of allposts; let i=index">
           <img src="{{allposts[i].posturl}}" imageViewer>
