--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -27,7 +27,7 @@
       <ion-item-options slide="left">
         <button ion-button color="primary" (click)="sendreq(key)">
           <ion-icon name="person-add"></ion-icon>
-          Send Request
+          Add
         </button>
       </ion-item-options>
       
