--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -45,8 +45,7 @@
       Friends
     </ion-list-header-->
     <ion-item *ngFor="let item of myfriends" (click)="friendchat(item)">
-      <button style="width:100%; background-color: rgb(38, 117, 166); display:inline-block; border-radius:10px; border:2px;">
-      <div style="font-size:16px; font:bold; position:relative; height:30px; color:white; background-color:rebeccapurple; padding:10px; border:1px;"><h3>{{item.displayName}}</h3></div></button>
+      <h3>{{item.displayName}} </h3>
     </ion-item>
   </ion-list>
 </ion-content>
