--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,30 +8,33 @@
 
 <ion-content padding>
 
-    <!-- <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <!--<ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>-->
+
     <ion-list>
       <ion-item *ngFor="let item of items">
         {{ item }}
       </ion-item>
-    </ion-list> -->
+    </ion-list> 
     
     <ion-list>
-
       <ion-item *ngFor="let item of allposts;let i=index" style="width: 100%">
+
         <div class="b">
+          <button ion-button icon-start clear large (click)= "ProfilePageClick()"  class = "button.b1 ">
+          <!-- <ion-item-divider> -->
             <ion-avatar item-start>
-                <img src="{{allposts[i].userpic}}">
-            </ion-avatar>
-          <!-- <ion-row> -->
-            <h1>
-                <small class="user-name"><div class="a" style="color: #000; font-weight: bold; margin-top: 5px; margin-left: 1px">
-                  {{allposts[i].username}}<br>
-                </div>
-                </small>
-              </h1>
-          <!-- </ion-row> -->
+                <img  src="{{allposts[i].userpic}}">
+            </ion-avatar> 
+            <!-- <ion-title text-left color = "calm"> -->
+                <p text-wrap style="font-family: Arial, Helvetica, sans-serif; color: black ; text-align: justify" >
+                  {{allposts[i].username}}</p><br>
+                <!-- </ion-title> -->
           
+          <!-- </ion-item-divider> -->
+        </button>
         </div>
+
+          <!-- </ion-row> -->
         <ion-row>
           <div style="width: 100% !important;">
             <img  src="{{allposts[i].posturl}}"  maxlength="100%"/>
