no hashtag search and fixed Atelier spelling

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,9 @@
 <link href="https://fonts.googleapis.com/css?family=Sacramento" type="text/css" rel="stylesheet">
 
+
 <ion-header>
   <ion-navbar>
-      <ion-title><h2>Atélier</h2></ion-title>
+      <ion-title><h2>Atelier</h2></ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -65,7 +66,7 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <p text-wrap style="font-family: Comic Sans MS;color: black;text-align: justify">
+          <p text-wrap style="font-family: Arial, Helvetica, sans-serif: black;text-align: justify">
             {{allposts[i].description}} </p>
         </ion-row> 
       </ion-item>
