--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,7 +18,7 @@
   <ion-content padding>
 
     <div class="align">
-        <h1>Atélier</h1>
+        <h1>Atelier</h1>
     </div>
 
       <ion-card>
