--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -1,6 +1,5 @@
 <!--
   Generated template for the FriendsPage page.
-
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
@@ -27,7 +26,7 @@
       <ion-item-options slide="left">
         <button ion-button color="primary" (click)="sendreq(key)">
           <ion-icon name="person-add"></ion-icon>
-          Add
+          Send Request
         </button>
       </ion-item-options>
       
