--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -1,6 +1,5 @@
 <!--
   Generated template for the MessagesPage page.
-
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
@@ -45,7 +44,8 @@
       Friends
     </ion-list-header-->
     <ion-item *ngFor="let item of myfriends" (click)="friendchat(item)">
-      <h3>{{item.displayName}} </h3>
+      <button style="width:100%; background-color: rgb(38, 117, 166); display:inline-block; border-radius:10px; border:2px;">
+      <div style="font-size:16px; font:bold; position:relative; height:30px; color:white; background-color:rebeccapurple; padding:10px; border:1px;"><h3>{{item.displayName}}</h3></div></button>
     </ion-item>
   </ion-list>
 </ion-content>
