removed p tag around img src in html pages

--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -26,7 +26,7 @@
      Choose from Library
    </button>
 
-    <p><img src = "{{postURL}}"> </p>
+    <img src = "{{postURL}}">
 
     <ion-list>
       
