--- a/src/pages/updateprofilepic/updateprofilepic.html
+++ b/src/pages/updateprofilepic/updateprofilepic.html
@@ -24,7 +24,7 @@
    Choose from library
  </button>
 
- <p><img src = "{{photo}}"> </p> 
+ <img src = "{{photo}}"> 
 
  <button ion-button (click)="goToProfile();" round>Save</button>
  <button ion-button (click)="cancel();" round>Cancel</button>
