changed some font styling on home

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,7 +26,7 @@
                 <img  src="{{allposts[i].userpic}}">
             </ion-avatar> 
             <!-- <ion-title text-left color = "calm"> -->
-                <p text-wrap style="font-family: Arial, Helvetica, sans-serif; color: black ; text-align: justify" >
+                <p text-wrap style="font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: black ; text-align: justify" >
                   {{allposts[i].username}}</p><br>
                 <!-- </ion-title> -->
           
@@ -66,7 +66,7 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <p text-wrap style="font-family: Arial, Helvetica, sans-serif: black;text-align: justify">
+          <p style="font-family: Helvetica, sans-serif; font-weight: normal; color: black; text-align: justify">
             {{allposts[i].description}} </p>
         </ion-row> 
       </ion-item>
