resolved package lock json merge conflict

--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -43,9 +43,9 @@
        
   </ion-searchbar>-->
 
-  <!--<div class="tags-input" data-name="tags-input"></div>
+  <div class="tags-input" data-name="tags-input"></div>
   <input class = "main-input" ion-input placeholder="#Hashtags" type = "text" [(ngModel)]="hashtag"> 
-  <button ion-button (click)="hashtagSearch()"><ion-icon name="search"></ion-icon> Search</button>-->
+  <button ion-button (click)="hashtagExists()"><ion-icon name="search"></ion-icon> Search</button>
 
   
       
