--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -24,7 +24,7 @@
     <ion-item-sliding *ngFor="let key of filteredusers" >
       <ion-item >
         <ion-avatar item-left (click)="goToOther()">
-          <img src="{{allposts[i].posturl}}" >
+          <img src='' >
         </ion-avatar> 
         <ion-item><h2>{{key.displayName}}</h2></ion-item>
       </ion-item>
