--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,12 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
     <!--<ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>-->
     <ion-list>
       <ion-item *ngFor="let item of items">
