--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -64,7 +64,7 @@
               <ion-icon name="text"></ion-icon>
               <!--</button (click)="goToPage()"></button>-->
               <!--<button ion-button (click)="btnclicked()">Comments</button> -->
-              <div><button ion-button icon-stat clear small (click) = "btnclicked()">
+              <div><button ion-button icon-stat clear small (click) = "btnclicked(allposts[i])">
                 Comments
               </button></div> 
             </button>
