Comment working/ only number input in add art page

--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -48,7 +48,8 @@
 
         <ion-item>
             <ion-label inline>Price</ion-label>
-            <ion-input type="text"[(ngModel)]="post.price"></ion-input>
+            <!-- gbahra edited it so only take number -->
+            <ion-input type="number"[(ngModel)]="post.price"></ion-input>
           </ion-item>
       
       </ion-list>
