--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -52,10 +52,14 @@
             </ion-icon>
           </ion-item> -->
           <ion-col>
-              <button ion-button icon-start clear small (click)="liked(i)">
-                  <ion-icon name="thumbs-up"></ion-icon>
-                  {{allposts[i].likes}} Likes
-                </button>
+              <button ion-button icon-start clear small (click)="liked(i)" *ngIf="!isLiked[i]">
+                <ion-icon name="thumbs-up"></ion-icon>
+                {{allposts[i].likes.length}} Likes
+              </button>
+              <button ion-button icon-start clear small *ngIf="isLiked[i]">
+                  <ion-icon name="thumbs-up" color="danger"></ion-icon>
+                  {{allposts[i].likes.length}} Likes
+              </button>
           </ion-col> 
 
 
