--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -53,7 +53,7 @@
       <ion-grid>
         <ion-row>
           <ion-col *ngFor ="let item of allposts; let i=index" col-6 no-padding>
-            <ion-card>
+            <ion-card (click)="goToPost(item)">
             <ion-card-header>
               {{allposts[i].title}}
             </ion-card-header>
