delete hashtag search

--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -34,9 +34,9 @@
 
 
 
-  <div class="tags-input" data-name="tags-input"></div>
+  <!--<div class="tags-input" data-name="tags-input"></div>
   <input class = "main-input" ion-input placeholder="#Hashtags" type = "text" [(ngModel)]="hashtag"> 
-  <ion-icon name="search" (click)="hashtagExists()"></ion-icon>
+  <ion-icon name="search" (click)="hashtagExists()"></ion-icon>-->
 
   
       
