--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -54,7 +54,7 @@
         <ion-row>
           <ion-col *ngFor ="let item of allposts; let i=index" col-6 no-padding>
             <ion-card>
-            <ion-icon style="float: right;" name="trash" (click)="deletePost()"></ion-icon>
+            <ion-icon style="float: right;" name="trash" (click)="deletePost(allposts[i].postid)"></ion-icon>
             <ion-card-header (click)="goToPost(item)">
               {{allposts[i].title}}
             </ion-card-header>
