--- a/src/pages/photo/photo.html
+++ b/src/pages/photo/photo.html
@@ -24,7 +24,7 @@
       <ion-row>
         <ion-col>
           <ion-card>
-          <ion-card-header>
+          <ion-card-header (click)="gotoOther()">
             {{specificpost.username}} 
              <button ion-button color="primary" (click)="sendreq(key)">
                   <ion-icon name="person-add"></ion-icon>
