--- a/src/pages/otheruserprofile/otheruserprofile.html
+++ b/src/pages/otheruserprofile/otheruserprofile.html
@@ -26,13 +26,13 @@
     <p  style="font-family: Helvetica, sans-serif;">{{bio}}</p>
   
     <ion-segment>
-      <ion-segment-button value="Posts">
+      <ion-segment-button value="Posts" (click)="gotoposts()">
         Posts
       </ion-segment-button>
-      <ion-segment-button value="Friends">
+      <ion-segment-button value="Friends" (click)="gotofriends()">
         Friends
       </ion-segment-button>
-      <ion-segment-button value="Add">
+      <ion-segment-button value="Add" (click)="sendreq()">
         + Add Friend
       </ion-segment-button>
     </ion-segment>
