user interaction updates

--- a/src/pages/photo/photo.html
+++ b/src/pages/photo/photo.html
@@ -26,7 +26,7 @@
           <ion-card>
           <ion-card-header>
             {{specificpost.username}} 
-             <button ion-button color="primary" (click)="sendreq(key)">
+             <button ion-button color="primary" (click)="sendreq()">
                   <ion-icon name="person-add"></ion-icon>
                   Send Request
                 </button>
