--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,12 +28,12 @@
           <ion-card-content>
              <ion-list >
                <ion-item>  
-                   <ion-input type="email" placeholder="Email" [(ngModel)]="user.email"></ion-input>
+                   <ion-input id="username" type="email" placeholder="Email" [(ngModel)]="user.email"></ion-input>
                </ion-item>
                <ion-item>  
-                   <ion-input type="password" placeholder="Password" [(ngModel)]="user.password"></ion-input>
+                   <ion-input id ="password" type="password" placeholder="Password" [(ngModel)]="user.password"></ion-input>
                </ion-item>
-              <button ion-button full clear color="light" (click)="login(user)">Login</button>
+              <button  ion-button full clear color="light" (click)="login(user)">Login</button>
               <button ion-button block round outline color="light" (click)="register()">Register</button>
              </ion-list>    
           </ion-card-content>
