--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -26,7 +26,7 @@
             <ion-card-content>
                <ion-list >
                  <ion-item>  
-                     <ion-input type="email" placeholder="Email" [(ngModel)]="newuser.email"></ion-input>
+                     <ion-input id="email1" type="email" placeholder="Email" [(ngModel)]="newuser.email"></ion-input>
                  </ion-item>
                  <ion-item>  
                      <ion-input type="password" placeholder="Password" [(ngModel)]="newuser.password"></ion-input>
