--- a/src/pages/otheruserprofile/otheruserprofile.html
+++ b/src/pages/otheruserprofile/otheruserprofile.html
@@ -21,9 +21,9 @@
     <h4>Lives in: {{(profileData | async)?.lives}}</h4>
     <h4>From City, State: {{(profileData | async)?.fromCity}}</h4>
   </ion-item-->
-    <h2 style="font-family: Helvetica, sans-serif;">{{username}}</h2>
+    <h2 style="font-family: Helvetica, sans-serif; margin-top:3%">{{username}}</h2>
     
-    <p  style="font-family: Helvetica, sans-serif;">{{bio}}</p>
+    <p  style="font-family: Helvetica, sans-serif; margin-top:3%; margin-bottom:3%">{{(profileData | async)?.bio}}</p>
   
     <ion-segment>
       <ion-segment-button value="Posts" (click)="gotoposts()">
