a bunch of additions

--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -33,7 +33,7 @@
           <ion-item-sliding *ngFor="let item of myrequests">
               <ion-item>
               <ion-avatar item-left>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQznbX_RRa464XPVEEz2UlxBKdu6mt6tgvIkakuNS8OoccPxvN">
+                <img src="{{item.photoURL}}">
               </ion-avatar>
               <h4>{{item.displayName}}</h4>
               </ion-item>
