--- a/src/pages/myfriendslist/myfriendslist.html
+++ b/src/pages/myfriendslist/myfriendslist.html
@@ -19,11 +19,25 @@
  
  
 <ion-content padding>
-  <ion-searchbar placeholder="search my friends"(ionInput)="getItems($event)"></ion-searchbar>
+  <ion-searchbar placeholder="search my friends" (ionInput)="searchfriends($event.target.value)"></ion-searchbar>
+  <ion-list no-lines *ngIf="search">
+      <ion-list >
+        <ion-item-sliding *ngFor="let key of filteredusers" >
+          <ion-item >
+            <ion-avatar item-left>
+              <img src='{{key.photoURL}}' >
+            </ion-avatar> 
+            <ion-item><h2>{{key.displayName}}</h2></ion-item>
+          </ion-item>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-list>
   <ion-list>
     <ion-item *ngFor="let item of myfriends">
+        <ion-avatar item-start>
+            <img src={{item.photoURL}}>
+          </ion-avatar> 
       <h3>{{item.displayName}}</h3> 
-      <img src={{profilePic}}>
     </ion-item>
   </ion-list>
 </ion-content>
