--- a/src/pages/otheruserfriends/otheruserfriends.html
+++ b/src/pages/otheruserfriends/otheruserfriends.html
@@ -5,14 +5,22 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>otheruserfriends</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+ 
+    <ion-navbar color="hcolor">
+      <ion-title>{{username}}'s Friends</ion-title>
+    </ion-navbar>
+   
+  </ion-header>
+   
+   
+  <ion-content padding>
+    <ion-list>
+      <ion-item *ngFor="let item of myfriends">
+          <ion-avatar item-start>
+              <img src={{item.photoURL}}>
+            </ion-avatar> 
+        <h3>{{item.displayName}}</h3> 
+      </ion-item>
+    </ion-list>
+  </ion-content>
+  
