--- a/src/pages/otheruseruploads/otheruseruploads.html
+++ b/src/pages/otheruseruploads/otheruseruploads.html
@@ -25,7 +25,7 @@
             <ion-card-content>
               <img src="{{allposts[i].posturl}}" imageViewer>
               <ion-row>
-                Price: {{allposts[i].price}}
+                Price: ${{allposts[i].price}}
               </ion-row>
               <ion-row>
                 {{allposts[i].description}}
