--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -63,7 +63,7 @@
               {{item.title}}
             </ion-row>
             <ion-row>
-             {{item.price}}
+             ${{item.price}}
             </ion-row>
             <ion-row>
               {{item.description}}
