--- a/src/pages/photo/photo.html
+++ b/src/pages/photo/photo.html
@@ -37,7 +37,7 @@
               {{specificpost.title}}
             </ion-row>
             <ion-row>
-             {{specificpost.price}}
+             ${{specificpost.price}}
             </ion-row>
             <ion-row>
               {{specificpost.description}}
