Push notifications plugins, minor tweaks; References cited as comments - code pertaining/related to direct messages functionality modeled from code of author Raja Yogan

--- a/src/pages/friendchat/friendchat.html
+++ b/src/pages/friendchat/friendchat.html
@@ -4,6 +4,11 @@
   Ionic pages and navigation.
 -->
 
+<!--
+  Some of the code in this page is modeled from that of https://tphangout.com/chat-app-with-ionic-3-firebase-ep-8-one2one-chat/
+  Author of code from above link: Raja Yogan
+-->
+
 <ion-header>
  
   <ion-navbar color="hcolor">
