--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -3,6 +3,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
+<!--
+  Some of the code for this page is modeled after that found in https://tphangout.com/chat-app-with-ionic-3-firebase-ep-6-sending-requests/
+  and https://tphangout.com/chat-app-with-ionic-3-firebase-ep-7-accepting-and-ignoring-requests/
+  The author of the code in the above link: Raja Yogan
+-->
+
 <ion-header>
 
   <ion-navbar>
