--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -3,6 +3,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
+<!--
+  /**
+ * The code in this page is modeled after that found in https://tphangout.com/chat-app-with-ionic-3-firebase-ep-4-adding-friends/
+ * The author of the code in the above link: Raja Yogan
+ */
+-->
+
 <ion-header>
 
   <ion-navbar color="hcolor">
