--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -3,6 +3,11 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
+<!--
+  Some of the code for this page is modeled after that found in https://tphangout.com/chat-app-with-ionic-3-firebase-ep-4-adding-friends/
+  The author of the code in the above link: Raja Yogan
+-->
 <ion-header>
  
   <ion-navbar color="hcolor">
@@ -19,30 +24,6 @@
  
 <ion-content padding>
   <ion-list>
-    <!--ion-list-header>
-      Requests
-    </ion-list-header>
-    <ion-item-sliding *ngFor="let item of myrequests">
-      <ion-item>
-      <ion-avatar item-left>
-        <img src="">
-      </ion-avatar>
-      <h4>{{item.displayName}}</h4>
-      </ion-item>
-      <ion-item-options>
-        <button ion-button color="secondary" (click)="accept(item)">
-          <ion-icon name="checkmark"></ion-icon>
-          ADD
-        </button>
-        <button ion-button color="danger" (click)="ignore(item)">
-          <ion-icon name="trash"></ion-icon>
-          NO
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-list-header>
-      Friends
-    </ion-list-header-->
     <ion-item *ngFor="let item of myfriends" (click)="friendchat(item)">
       
         <button style="text-align: left; opacity: .95; font-size: 14pt; color:whitesmoke; width:100%; height:55px; background-color: rgb(38, 117, 166); border-radius:15px; border: 2px solid goldenrod; padding-left: 20px">
