--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -43,8 +43,8 @@
     
     <p  style="font-family: Helvetica, sans-serif;" (click)="addbio()">{{bio}}</p>
   
-    <ion-segment>
-      <ion-segment-button value="Posts" (click)="gotoposts()">
+    <ion-segment color="light">
+      <ion-segment-button value="Posts" (click)="gotoposts()" >
         Posts
       </ion-segment-button>
       <ion-segment-button value="Friends" (click)="gotofriends()">
