--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -42,6 +42,11 @@
         </ion-item>
 
         <ion-item>
+          <ion-label inline>Medium</ion-label>
+          <ion-input maxlength="20" type="text"[(ngModel)]="post.medium"></ion-input>
+        </ion-item>
+
+        <ion-item>
             <ion-label inline>Price</ion-label>
             <!-- gbahra edited it so only take number -->
             <ion-input maxlength="10" type="number"[(ngModel)]="post.price"></ion-input>
