--- a/src/pages/edit-art/edit-art.html
+++ b/src/pages/edit-art/edit-art.html
@@ -18,7 +18,7 @@
     <ion-list>
         <ion-item>
           <ion-label inline>Title</ion-label>
-          <ion-label inline>eeeee:{{post.test}}</ion-label>
+          <ion-label inline>{{post.test}}</ion-label>
           
           <ion-input maxlength="20" type="text"[(ngModel)]="post.title"></ion-input>
         </ion-item>
@@ -29,8 +29,13 @@
         </ion-item>
 
         <ion-item>
+          <ion-label inline>Medium</ion-label>
+          <ion-input maxlength="20" type="text"[(ngModel)]="post.medium"></ion-input>
+        </ion-item>
+
+        <ion-item>
             <ion-label inline>Price</ion-label>
-            <ion-label inline>xxxxx{{post.price}}</ion-label>
+            <ion-label inline>{{post.price}}</ion-label>
             <!-- gbahra edited it so only take number -->
             <ion-input maxlength="10" type="number"[(ngModel)]="post.price"></ion-input>
           </ion-item>
