--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -14,7 +14,7 @@
 <ion-header>
 
   <ion-navbar color="hcolor">
-    <ion-title>Friends</ion-title>
+    <ion-title>Add Friends</ion-title>
   </ion-navbar>
  
 </ion-header>
