--- a/src/pages/helpand-supp/helpand-supp.html
+++ b/src/pages/helpand-supp/helpand-supp.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>HelpandSupp</ion-title>
+    <ion-title>Help and Support</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+<p style="margin:5%; justify-content: center">If you run into any problems while using Atelier, or have any questions and concerns regarding our app, <br> please email us at <b><i>atelierapp2019@gmail.com</i></b></p>
 </ion-content>
