--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -7,8 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>User Uploads</ion-title> 
-    <button ion-icon name = "add" ion-button (click)="openAdd()">Add Art</button>
+    <ion-title>User Uploads</ion-title>
+    <ion-buttons clear end>
+        <button ion-button icon-only color="dark"(click)="openAdd()">
+            <ion-icon name="add-circle"></ion-icon>
+          </button>
+    </ion-buttons>
   </ion-navbar>
   
 
