--- a/src/pages/friendchat/friendchat.html
+++ b/src/pages/friendchat/friendchat.html
@@ -25,13 +25,13 @@
       <ion-avatar item-left *ngIf="item.sentby === friend.uid">
         <img src="{{friendimg}}">
       </ion-avatar>
-      <div class="bubble2 me" *ngIf="item.sentby === friend.uid">
+      <div class="text2 me" *ngIf="item.sentby === friend.uid">
         <h3 style="color:black">{{item.message}}</h3>
       </div>
       <ion-avatar item-right *ngIf="item.sentby != friend.uid">
         <img src="{{userimg}}">
       </ion-avatar>
-      <div class="bubble friend" *ngIf="item.sentby != friend.uid">
+      <div class="text friend" *ngIf="item.sentby != friend.uid">
         <h3 style="color:white">{{item.message}}</h3>
       </div>
     </ion-item>
@@ -43,7 +43,7 @@
     <ion-input [(ngModel)]="newmessage" placeholder="Type message..."></ion-input>  
     <ion-buttons end>
       <button ion-button (click)="addmessage()">
-        <ion-icon name="send" color="primary"></ion-icon>
+        <ion-icon name="paper-plane" color="primary"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>    
