navigation changes to useruploads pg

--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -27,7 +27,7 @@
             <ion-card>
             <ion-icon style="float: right;" name="trash" (click)="deletePost(allposts[i].postid)"></ion-icon>
             <ion-icon style="float: right;" name="create" (click)="goToPost(item)"></ion-icon>
-            <ion-card-header style = "float: center;">
+            <ion-card-header style = "float: center;" text-wrap>
               {{allposts[i].title}}
             </ion-card-header>
             <ion-card-content>
