ion button color change

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -43,7 +43,7 @@
     
     <p  style="font-family: Helvetica, sans-serif;" (click)="addbio()">{{bio}}</p>
   
-    <ion-segment color="light">
+    <ion-segment color="dark">
       <ion-segment-button value="Posts" (click)="gotoposts()" >
         Posts
       </ion-segment-button>
