--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="UserUploads" tabIcon="apps"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Notifications" tabIcon="notifications"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="Explore" tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home" color="dark"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="UserUploads" tabIcon="apps" color="dark"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person" color="dark"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Notifications" tabIcon="notifications" color="dark"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Explore" tabIcon="search" color="dark"></ion-tab>
 </ion-tabs>
